fixed opening and closing of details div using display:'none' instead of visibility:'hidden'. fixed the logic of opening and closing the div

--- a/src/css/Details.css
+++ b/src/css/Details.css
@@ -1,7 +1,9 @@
 .Details {
+    display: flex;
+    flex-direction: column;
     padding: 0;
-    width: 0;
-    height: 0;
+    width: 100%;
+    height: 100%;
     box-sizing: border-box;
 }
 .taskTitle {
